custom.css
/* ... */
.item #img2 img {
    height: auto
}

.item .img3,
.item #img3 {
    grid-area: img3;
    align-self: end;
}

.item .img3 img,
.item #img3 img {
    width: 40px;
    height: 40px;
}

/* item with button group */
#type .btn-group,
.input .btn-group {
    overflow-x: auto;
}

.item td.input {
    grid-area: status;
    justify-self: right;
    align-self: center;
    padding-right: 20px;
    max-width: 100%;
}

.selectorlevels {
    font-size: 15px;
    text-align: right;
    margin-top: 0 !important;
}

.selectorlevels > select {
    padding: 5px;
    color: var(--main-blue-color) !important;
    outline: 0;
    max-width: 100%;
}

.selectorlevels > span {
    max-width: -webkit-fill-available;
    padding: 0;
}

/* Time Ago */
#dashcontent #timeago {
    display: none;
    grid-area: lastupdate / lastupdate / tools / tools;
    padding-right: 20px;
}

.item #timeago {
    color: var(--secondary-text-color);
    font-family: main-font;
    font-size: 80%;
    grid-area: lastupdate;
    justify-self: right;
}

/* dashboard items - hide last seen by default, dashboard_show_last_update.css reveals it */
#dashcontent .lastupdate,
#dashcontent #lastupdate {
    display: none;
}

#type .dimslider,
.input .dimslider,
.statusNormal .dimslider,
.statusProtected .dimslider {
    background: rgba(0, 0, 0, 0.26);
    border: none;
    border-radius: 3px;
    box-shadow: none;
    height: 5px;
    right: 20px;
    width: calc(100% - 100px) !important;
}

.span4 td#img2 ~ #type .dimslider,
.span4 td#img2 ~ .input .dimslider,
.span4 td#img2 ~ .statusNormal .dimslider,
.span4 td#img2 ~ .statusProtected .dimslider {
    width: 50% !important;
    margin-top: 0 !important;
}

#type .dimslider .ui-slider-range,
.input .dimslider .ui-slider-range,
.statusNormal .dimslider .ui-slider-range,
.statusProtected .dimslider .ui-slider-range {
    background: rgba(var(--main-blue-color-values), 0.5);
}

#type .dimslider .ui-slider-handle,
.input .dimslider .ui-slider-handle,
.statusNormal .dimslider .ui-slider-handle,
.statusProtected .dimslider .ui-slider-handle {
    width: 15px;
    height: 15px;
    background: var(--main-blue-color);
    border-radius: 50%;
    top: -5px;
}

@media (min-width: 1200px) {
    #type .dimslider, .input .dimslider {
        width: 55% !important;
    }
}

body {
    background: var(--main-bg-color) !important;
    font-family: main-font;
    color: var(--main-text-color);
}

html {
    scrollbar-gutter: stable;
}

html.cover {
    background-position: center center !important;
    background-size: cover !important;
    background-repeat: no-repeat !important;
    background-attachment: fixed !important;
    height: 100vh;
}

html.pattern {
    background-size: auto !important;
    background-repeat: repeat !important;
    background-attachment: scroll !important;
}

/* Header */
header.logo {
    background: var(--main-disabled-color);
    background: linear-gradient(to right, var(--main-disabled-color) 0%, var(--main-blue-color) 100%);
}

.container-logo {
    height: 40px;
    margin: 0 auto;
    position: relative;
}
.page-content-container {
    background: var(--main-item-bg-color) !important;
    border: 1px solid var(--main-blue-color) !important;
    border-radius: 5px;
    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
    padding: 10px 0;
    margin-top: 10px;
    color: var(--main-text-color);
}

.page-content-container a,
.page-content-container a:link,
.page-content-container a:visited {
    color: var(--main-blue-color);
}

/* Timer/Log form styling */
.page-content-container table:not(.dataTable) {
    color: var(--main-text-color);
}

.page-content-container table:not(.dataTable) td {
    padding: 4px 8px;
    color: var(--main-text-color);
}

.page-content-container table:not(.dataTable) label {
    color: var(--secondary-text-color);
}

/* Timer Grid view */
.ts-planning {
    color: var(--main-text-color);
}

.ts-planning table {
    border-color: var(--main-border-color);
}

.ts-planning table td,
.ts-planning table th {
    border-color: var(--main-border-color);
    color: var(--main-text-color);
}

.ts-planning .modes .mode {
    border-radius: 3px;
    margin: 2px;
}

/* Activate/Deactivate buttons on grid view */
.page-content-container .btnstyle3,
.page-content-container .btnstyle3-sel {
    border-radius: 5px;
    padding: 4px 12px;
}

.events-editor {
    margin-top: 40px;
}

.brand img,
.brand h1,
.brand h2 {
    display: none;
  /*Standart header logo*/
}

img.header__icon {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 0%;
    width: 150px;
}

div.menu-toggle {
    display: none;
    cursor: pointer;
    z-index: 1001;
    top: 0;
    left: 10px;
    width: 25px;
    height: 25px;
    position: fixed;
    padding: 0 5px;
}

.menu-toggle:after, 
.menu-toggle:before, 
.menu-toggle div {
    background-color: #fff;
    border-radius: 3px;
    content: '';
    display: block;
    height: 4px;
    margin: 6px 0;
    transition: all .2s ease-in-out;
}

div.menu-toggle.scrolled {
    background: var(--main-blue-color);
    transition: background-color 1s ease;
    padding: 0 5px 15px 5px;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
}

.navbar-inverse .navbar-inner.slide + .menu-toggle:before {
    transform: translateY(12px) rotate(135deg);
}

.navbar-inverse .navbar-inner.slide + .menu-toggle:after {
    transform: translateY(-8px) rotate(-135deg);
}

.navbar-inverse .navbar-inner.slide + .menu-toggle div {
    transform: scale(0);
}

.navbar-inverse .navbar-inner {
    border: none;
    background: var(--main-navbar-bg-color);
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
}

.navbar-inverse .nav li.dropdown > .dropdown-toggle .caret {
    margin: 0;
    position: absolute;
    left: 50%;
    transform: translate(-50%);
    bottom: 5px;
    border-top-color: var(--main-text-color);
    border-bottom-color: var(--main-text-color);
}
/* ... */

